kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoready
  labels:
    app: photoready
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoready
  template:
    metadata:
      labels:
        app: photoready
    spec:

      containers:
      - name: photoready-fpm
        image: photoready:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 100Mi

      - name: photoready-nginx
        image: nginx:1.19-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /var/www
        - name: conf
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: web-content
        emptyDir: {}
      - name: lib-content
        emptyDir: {}
      - name: conf
        configMap:
          name: nginx-conf
      - name: flyway-conf
        configMap:
          name: flyway-conf
      - name: flyway-jars
        configMap:
          name: flyway-jars
      - name: flyway-sql
        configMap:
          name: flyway-sql
